crates/nash-parse/src/expression/snapshots/nash_parse__expression__keyword__tests__assert_binop.snap
---
source: crates/nash-parse/src/expression/keyword.rs
description: "Code:\n\nassert x == y"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    value: Assert(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 8,
                },
                end: Position {
                    line: 1,
                    column: 14,
                },
            },
            value: BinOps {
                operands: [
                    BinOpOperand {
                        expr: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 8,
                                },
                                end: Position {
                                    line: 1,
                                    column: 9,
                                },
                            },
                            value: Var {
                                kind: LowVar,
                                name: "x",
                            },
                        },
                        op: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 10,
                                },
                                end: Position {
                                    line: 1,
                                    column: 12,
                                },
                            },
                            value: "==",
                        },
                    },
                ],
                last: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 13,
                        },
                        end: Position {
                            line: 1,
                            column: 14,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "y",
                    },
                },
            },
        },
    ),
}
