crates/nash-parse/src/expression/snapshots/nash_parse__expression__keyword__tests__error_assert_without_body.snap
---
source: crates/nash-parse/src/expression/keyword.rs
description: "Code:\n\nassert"
---
Assert(
    Body(
        Start(
            1,
            7,
        ),
        1,
        7,
    ),
    1,
    1,
)
