crates/nash-parse/src/expression/snapshots/nash_parse__expression__keyword__tests__error_comptime_without_body.snap
---
source: crates/nash-parse/src/expression/keyword.rs
description: "Code:\n\ncomptime"
---
Comptime(
    Body(
        Start(
            1,
            9,
        ),
        1,
        9,
    ),
    1,
    1,
)
