crates/nash-parse/src/expression/snapshots/nash_parse__expression__keyword__tests__error_trace_without_body.snap
---
source: crates/nash-parse/src/expression/keyword.rs
description: "Code:\n\ntrace \"m\""
---
Trace(
    Body(
        Start(
            1,
            10,
        ),
        1,
        10,
    ),
    1,
    1,
)
