crates/nash-parse/src/expression/snapshots/nash_parse__expression__keyword__tests__fail_does_not_swallow_case_branch.snap
---
source: crates/nash-parse/src/expression/keyword.rs
description: "Code (indented inside a def):\n\n    case action of\n        Cancel -> fail\n        Continue -> 1\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 5,
        },
        end: Position {
            line: 4,
            column: 1,
        },
    },
    value: Case {
        scrutinee: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 10,
                },
                end: Position {
                    line: 1,
                    column: 16,
                },
            },
            value: Var {
                kind: LowVar,
                name: "action",
            },
        },
        arms: [
            CaseArm {
                pattern: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 9,
                        },
                        end: Position {
                            line: 2,
                            column: 16,
                        },
                    },
                    value: Ctor {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 9,
                            },
                            end: Position {
                                line: 2,
                                column: 15,
                            },
                        },
                        name: "Cancel",
                        args: [],
                    },
                },
                body: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 19,
                        },
                        end: Position {
                            line: 2,
                            column: 23,
                        },
                    },
                    value: Fail(
                        None,
                    ),
                },
            },
            CaseArm {
                pattern: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 9,
                        },
                        end: Position {
                            line: 3,
                            column: 18,
                        },
                    },
                    value: Ctor {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 9,
                            },
                            end: Position {
                                line: 3,
                                column: 17,
                            },
                        },
                        name: "Continue",
                        args: [],
                    },
                },
                body: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 21,
                        },
                        end: Position {
                            line: 3,
                            column: 22,
                        },
                    },
                    value: Int(
                        1,
                    ),
                },
            },
        ],
    },
}
