crates/nash-parse/src/expression/snapshots/nash_parse__expression__keyword__tests__fail_message.snap
---
source: crates/nash-parse/src/expression/keyword.rs
description: "Code:\n\nfail \"boom\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Fail(
        Some(
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 12,
                    },
                },
                value: Str(
                    "boom",
                ),
            },
        ),
    ),
}
