crates/nash-parse/src/expression/snapshots/nash_parse__expression__keyword__tests__todo_empty.snap
---
source: crates/nash-parse/src/expression/keyword.rs
description: "Code:\n\ntodo"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Todo(
        None,
    ),
}
