crates/nash-parse/src/expression/snapshots/nash_parse__expression__keyword__tests__trace_binop_body.snap
---
source: crates/nash-parse/src/expression/keyword.rs
description: "Code:\n\ntrace \"m\" x + 1"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 16,
        },
    },
    value: Trace {
        message: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 7,
                },
                end: Position {
                    line: 1,
                    column: 10,
                },
            },
            value: Str(
                "m",
            ),
        },
        body: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 11,
                },
                end: Position {
                    line: 1,
                    column: 16,
                },
            },
            value: BinOps {
                operands: [
                    BinOpOperand {
                        expr: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 11,
                                },
                                end: Position {
                                    line: 1,
                                    column: 12,
                                },
                            },
                            value: Var {
                                kind: LowVar,
                                name: "x",
                            },
                        },
                        op: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 13,
                                },
                                end: Position {
                                    line: 1,
                                    column: 14,
                                },
                            },
                            value: "+",
                        },
                    },
                ],
                last: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 15,
                        },
                        end: Position {
                            line: 1,
                            column: 16,
                        },
                    },
                    value: Int(
                        1,
                    ),
                },
            },
        },
    },
}
